Dish Q4 Too Much Space Fix

--- a/app/scss/structure/_app-main.scss
+++ b/app/scss/structure/_app-main.scss
@@ -1125,6 +1125,9 @@ div.mobile-app-nav-arrows {
             }
         }
 	}
+    a.answer-box.radio-2 {
+        margin: 1px auto;   
+    }
     .regular-2-container {
         width: 90% !important;
     }
